src/Base/main/default/objects/GMBLASERP__Serial_Number__c/GMBLASERP__Serial_Number__c.object-meta.xml
<CustomObject>
    <label>Serial Number</label>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serial Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>