src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Auto_Trader_Ad_Link__c.field-meta.xml
<CustomField>
    <fullName>Auto_Trader_Ad_Link__c</fullName>
    <description>Auto Trader Ad Link for the Serial Number.</description>
    <inlineHelpText>Auto Trader Ad Link for the Serial Number.</inlineHelpText>
    <label>Auto Trader Ad Link</label>
    <length>150</length>
    <type>Text</type>
</CustomField>