src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Boat_Dealers_Ad_Link__c.field-meta.xml
<CustomField>
    <fullName>Boat_Dealers_Ad_Link__c</fullName>
    <description>Boat Dealers Ad Link for the Serial Number</description>
    <label>Boat Dealers Ad Link</label>
    <length>150</length>
    <type>Text</type>
</CustomField>