src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Compartment_Key_Code__c.field-meta.xml
<CustomField>
    <fullName>Compartment_Key_Code__c</fullName>
    <label>Compartment Key Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>