src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Current_Retail_Price__c.field-meta.xml
<CustomField>
    <fullName>Current_Retail_Price__c</fullName>
    <description>This is the current Retail price, as entered on the Product</description>
    <formula>GMBLASERP__Product__r.Current_Retail_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the current Retail price, as entered on the Product</inlineHelpText>
    <label>Current Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>