src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Dealer_Rigged__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Rigged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dealer Rigged</label>
    <type>Checkbox</type>
</CustomField>