src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Default_Image_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Image_Id__c</fullName>
    <formula>IF( ISNULL( Legend_Gallery_Image__c ) , NULL, Legend_Gallery_Image__r.Active_S3_Object__r.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Image Id</label>
    <type>Text</type>
</CustomField>