src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Description_Used__c.field-meta.xml
<CustomField>
    <fullName>Description_Used__c</fullName>
    <description>Enter a detailed description of a used model here.</description>
    <label>Description - Used</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>