src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Facebook_Marketplace_Ad_Link__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Marketplace_Ad_Link__c</fullName>
    <description>Facebook Marketplace Ad Link for the Serial Number.</description>
    <inlineHelpText>Facebook Marketplace Ad Link for the Serial Number.</inlineHelpText>
    <label>Facebook Marketplace Ad Link</label>
    <length>150</length>
    <type>Text</type>
</CustomField>