src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/GMBLASERP__Lot__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Lot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lot</label>
    <referenceTo>GMBLASERP__Lot__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>