src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/GMBLASERP__Product__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>