src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/GMBLASERP__Uniquefier__c.field-meta.xml
<CustomField>
    <fullName>GMBLASERP__Uniquefier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Uniquefier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>