src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Inventory_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Out_Date__c</fullName>
    <description>Auto populated when a serial number goes out of inventory</description>
    <label>Inventory Out Date</label>
    <type>DateTime</type>
</CustomField>