src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/IsRegisteredWithSupplier__c.field-meta.xml
<CustomField>
    <fullName>IsRegisteredWithSupplier__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Registered With Supplier</label>
    <type>Checkbox</type>
</CustomField>