src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Kijiji_Ad_Link__c.field-meta.xml
<CustomField>
    <fullName>Kijiji_Ad_Link__c</fullName>
    <description>Kijiji Link for the Ad.</description>
    <label>Kijiji Ad Link</label>
    <length>150</length>
    <type>Text</type>
</CustomField>