src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Legend_Gallery_Image__c.field-meta.xml
<CustomField>
    <fullName>Legend_Gallery_Image__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legend Gallery Image</label>
    <referenceTo>Legend_Gallery_Image__c</referenceTo>
    <relationshipLabel>Serial Numbers</relationshipLabel>
    <relationshipName>Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>