src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/List_on_Retail_Website__c.field-meta.xml
<CustomField>
    <fullName>List_on_Retail_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you&apos;d like to display this item on the associated Retail Website.</description>
    <label>List on Retail Website</label>
    <type>Checkbox</type>
</CustomField>