src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>BLANKVALUE( GMBLASERP__Inventory_Balance__r.AcctSeedERP__Warehouse__r.Name , &apos;OUT&apos;)</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>