src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Nest__c.field-meta.xml
<CustomField>
    <fullName>Nest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nest</label>
    <referenceTo>GMBLASERP__Serial_Number__c</referenceTo>
    <relationshipLabel>Nested Serial Numbers</relationshipLabel>
    <relationshipName>Nested_Serial_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>