src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Paid</fullName>
                <default>true</default>
                <label>To be Paid</label>
            </value>
            <value>
                <fullName>Paid at Wells Fargo</fullName>
            </value>
            <value>
                <fullName>Paid Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>