src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Promotion_Amount__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Amount__c</fullName>
    <description>Current Promotion Amount (from the Product if Applicable)</description>
    <formula>GMBLASERP__Product__r.Current_Promotion_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promotion Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>