src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Quality_Inspector__c.field-meta.xml
<CustomField>
    <fullName>Quality_Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Inspector</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Serial Numbers (Quality Inspector)</relationshipLabel>
    <relationshipName>Serial_Numbers2</relationshipName>
    <type>Lookup</type>
</CustomField>