src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/RegisteredWithSupplierDate__c.field-meta.xml
<CustomField>
    <fullName>RegisteredWithSupplierDate__c</fullName>
    <label>Registered With Supplier Date</label>
    <type>DateTime</type>
</CustomField>