src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Retail_Age__c.field-meta.xml
<CustomField>
    <fullName>Retail_Age__c</fullName>
    <formula>IF( ISNULL(Inventory_Out_Date__c) , Now(), Inventory_Out_Date__c) - Retail_Receive_Date__c</formula>
    <label>Retail Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>