src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Retail_Age_Savings_Percent__c.field-meta.xml
<CustomField>
    <fullName>Retail_Age_Savings_Percent__c</fullName>
    <description>2.5% + 2.5% per 180 days, up to 7.5%</description>
    <formula>IF(  ISPICKVAL(Status__c, &quot;Specials List&quot;) || ISPICKVAL(Status__c, &quot;Demo&quot;), MIN(0.025 + ROUND(Retail_Age__c / 180,0)* 0.025, 0.075), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>2.5% + 2.5% per 180 days, up to 7.5%</inlineHelpText>
    <label>Retail Age Savings %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>