src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Retail_Receive_Date__c.field-meta.xml
<CustomField>
    <fullName>Retail_Receive_Date__c</fullName>
    <label>Retail Receive Date</label>
    <type>DateTime</type>
</CustomField>