src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/RetailSalePrice__c.field-meta.xml
<CustomField>
    <fullName>RetailSalePrice__c</fullName>
    <inlineHelpText>Suggested Retail Sales Price for Used Inventory only.</inlineHelpText>
    <label>Retail Price (Used)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>