src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Savings_Demo_and_Damaged__c.field-meta.xml
<CustomField>
    <fullName>Savings_Demo_and_Damaged__c</fullName>
    <inlineHelpText>This is a manual field for Demo or Damaged Savings</inlineHelpText>
    <label>Savings: Demo and Damaged</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>