src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Savings_Non_Current__c.field-meta.xml
<CustomField>
    <fullName>Savings_Non_Current__c</fullName>
    <description>Non-Current Savings</description>
    <inlineHelpText>This is a manual field that can be entered by a Sales Manager for non-current savings</inlineHelpText>
    <label>Savings: Non-Current</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>