src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Savings_Retail_Age__c.field-meta.xml
<CustomField>
    <fullName>Savings_Retail_Age__c</fullName>
    <description>Retail Age Savings Formula.</description>
    <formula>- FLOOR(  Current_Retail_Price__c   * Retail_Age_Savings_Percent__c / IF(Current_Retail_Price__c&gt;25000, 500, 250)) * IF(Current_Retail_Price__c&gt;25000, 500, 250)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Retail Age Savings Formula. 
Current Retail Price x Retail Age Savings %</inlineHelpText>
    <label>Savings: Retail Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>