src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of serialized inventory items that indicate whether it is a display model, to be repaired, return to supplier, or specials list if we are selling as is.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>At Supplier</fullName>
            </value>
            <value>
                <fullName>Available for Sale</fullName>
            </value>
            <value>
                <fullName>Boatopia</fullName>
            </value>
            <value>
                <fullName>Boat Show</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
                <isActive>false</isActive>
                <label>Consignment</label>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Display Model</fullName>
            </value>
            <value>
                <fullName>In Showroom</fullName>
                <isActive>false</isActive>
                <label>In Showroom</label>
            </value>
            <value>
                <fullName>Reserved for Retail</fullName>
                <isActive>false</isActive>
                <label>Reserved for Retail</label>
            </value>
            <value>
                <fullName>Return to Supplier</fullName>
            </value>
            <value>
                <fullName>Specials List</fullName>
            </value>
            <value>
                <fullName>Stolen</fullName>
            </value>
            <value>
                <fullName>To Be Repaired</fullName>
            </value>
            <value>
                <fullName>Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>