src/Base/main/default/objects/GMBLASERP__Serial_Number__c/fields/Total_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings__c</fullName>
    <formula>Savings_Demo_and_Damaged__c +  Promotion_Amount__c + Savings_Retail_Age__c +  Savings_Non_Current__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Savings includes Promotion, Demo, Damaged, Retail Age, and Non-Current Savings.</inlineHelpText>
    <label>Total Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>