src/Base/main/default/objects/GMBLASERP__Serial_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available__c</columns>
    <columns>Location_Status__c</columns>
    <columns>GMBLASERP__Lot__c</columns>
    <columns>GMBLASERP__Product__c</columns>
    <columns>Nest__c</columns>
    <columns>GMBLASERP__Inventory_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Used</value>
    </filters>
    <filters>
        <field>Location_Status__c</field>
        <operation>contains</operation>
        <value>Whitefish</value>
    </filters>
    <label>All</label>
</ListView>