src/Base/main/default/objects/GMBLASERP__Serial_Number__c/listViews/Dealer_Rigged.listView-meta.xml
<ListView>
    <fullName>Dealer_Rigged</fullName>
    <columns>NAME</columns>
    <columns>Available__c</columns>
    <columns>Product_Name__c</columns>
    <columns>GMBLASERP__Inventory_Balance__c</columns>
    <columns>GMBLASERP__Product__c</columns>
    <columns>Location__c</columns>
    <columns>GMBLASERP__Lot__c</columns>
    <columns>Nest__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dealer_Rigged__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Dealer Rigged</label>
    <language>en_US</language>
</ListView>