src/Base/main/default/objects/GMBLASERP__Serial_Number__c/listViews/Trailer_Special_s_List.listView-meta.xml
<ListView>
    <fullName>Trailer_Special_s_List</fullName>
    <booleanFilter>(1 OR 5) AND 2 AND 3 AND 4 AND 6</booleanFilter>
    <columns>Location__c</columns>
    <columns>NAME</columns>
    <columns>GMBLASERP__Lot__c</columns>
    <columns>GMBLASERP__Product__c</columns>
    <columns>Notes__c</columns>
    <columns>Savings__c</columns>
    <columns>Status__c</columns>
    <columns>Sold_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_Retail__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Record_Type__c</field>
        <operation>equals</operation>
        <value>Trailer</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Demo,Display Model,Specials List</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Montreal,Whitefish,Barrie,Wholesale</value>
    </filters>
    <filters>
        <field>Available_Wholesale__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Nest__c</field>
        <operation>equals</operation>
    </filters>
    <label>Trailer Special&apos;s List</label>
    <sharedTo>
        <role>Memory_Makers_Barrie</role>
        <role>Memory_Makers_Montreal</role>
        <role>Memory_Makers_Whitefish</role>
        <role>National_Sales_Manager</role>
        <role>Sales_Manager_Barrie</role>
        <role>Sales_Manager_Montreal</role>
        <role>Sales_Manager_Whitefish</role>
        <role>Store_Manager_Barrie</role>
        <role>Store_Manager_Montreal</role>
        <role>Store_Manager_Whitefish</role>
    </sharedTo>
</ListView>