src/Base/main/default/objects/GMBLASERP__Serial_Number__c/listViews/Used_Boats_Barrie.listView-meta.xml
<ListView>
    <fullName>Used_Boats_Barrie</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
    <columns>Location__c</columns>
    <columns>NAME</columns>
    <columns>GMBLASERP__Lot__c</columns>
    <columns>GMBLASERP__Product__c</columns>
    <columns>Notes__c</columns>
    <columns>Savings__c</columns>
    <columns>Status__c</columns>
    <columns>Retail_Age__c</columns>
    <columns>Sold_Opportunity__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_Retail__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Product_Record_Type__c</field>
        <operation>equals</operation>
        <value>Boat</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Used</value>
    </filters>
    <filters>
        <field>Location__c</field>
        <operation>equals</operation>
        <value>Barrie</value>
    </filters>
    <label>Used Boats - Barrie</label>
</ListView>